tests/ui-stable/non-lit.stderr
error: argument must be a single string literal
 --> $DIR/non-lit.rs:4:12
  |
4 |     indoc!(fail);
  |            ^^^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
